@@ -4,35 +4,18 @@ import cn.opensrcdevelop.auth.biz.constants.UserAttrDataTypeEnum;
 import cn.opensrcdevelop.auth.biz.dto.user.attr.UserAttrResponseDto;
 import cn.opensrcdevelop.auth.biz.dto.user.attr.dict.DictDataResponseDto;
 import cn.opensrcdevelop.auth.biz.service.user.attr.dict.DictDataService;
+import cn.opensrcdevelop.common.exception.ServerException;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.apache.poi.ss.usermodel.*;
+import org.apache.poi.ss.util.CellRangeAddress;
+import org.apache.poi.ss.util.CellRangeAddressList;
+import org.apache.poi.xssf.usermodel.*;
+import org.springframework.stereotype.Component;
+
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.util.*;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-import org.apache.poi.ss.usermodel.BorderStyle;
-import org.apache.poi.ss.usermodel.Cell;
-import org.apache.poi.ss.usermodel.CellStyle;
-import org.apache.poi.ss.usermodel.ClientAnchor;
-import org.apache.poi.ss.usermodel.Comment;
-import org.apache.poi.ss.usermodel.CreationHelper;
-import org.apache.poi.ss.usermodel.DataValidation;
-import org.apache.poi.ss.usermodel.DataValidationConstraint;
-import org.apache.poi.ss.usermodel.DataValidationHelper;
-import org.apache.poi.ss.usermodel.Drawing;
-import org.apache.poi.ss.usermodel.FillPatternType;
-import org.apache.poi.ss.usermodel.HorizontalAlignment;
-import org.apache.poi.ss.usermodel.Row;
-import org.apache.poi.ss.usermodel.Sheet;
-import org.apache.poi.ss.usermodel.VerticalAlignment;
-import org.apache.poi.ss.usermodel.Workbook;
-import org.apache.poi.ss.util.CellRangeAddress;
-import org.apache.poi.ss.util.CellRangeAddressList;
-import org.apache.poi.xssf.usermodel.XSSFCellStyle;
-import org.apache.poi.xssf.usermodel.XSSFColor;
-import org.apache.poi.xssf.usermodel.XSSFFont;
-import org.apache.poi.xssf.usermodel.XSSFSheet;
-import org.apache.poi.xssf.usermodel.XSSFWorkbook;
-import org.springframework.stereotype.Component;
 
 /**
  * Excel 模板生成器
@@ -56,12 +39,14 @@ public class ExcelTemplateGenerator {
     private static final Map<String, String> FIELD_COMMENTS = Map.ofEntries(
             Map.entry("operationType", "0=新增，1=更新，2=删除"),
             Map.entry("userId", "更新/删除时必填，用于指定用户"),
-            Map.entry("username", "必填，唯一标识"),
-            Map.entry("emailAddress", "格式：example@domain.com"),
+            Map.entry("username", "添加时必填，唯一标识"),
+            Map.entry("emailAddress", "新增时必填，格式：example@domain.com"),
             Map.entry("phoneNumber", "格式：13800138000"),
             Map.entry("locked", "是/否"),
             Map.entry("consoleAccess", "是/否"),
             Map.entry("enableMfa", "是/否"));
+
+    private static final Integer MAX_ROW_COUNT = 50000;
 
     /**
      * 生成用户导入模版
@@ -83,9 +68,6 @@ public class ExcelTemplateGenerator {
             // 创建表头（两行：父标题 + 子标题）
             int lastCol = createHeader(sheet, allFields, columnPositions);
 
-            // 添加示例行
-            createExampleRow(sheet, lastCol);
-
             // 设置数据验证（下拉列表）
             setDataValidations(sheet, workbook, allFields, columnPositions);
 
@@ -97,33 +79,18 @@ public class ExcelTemplateGenerator {
 
             return workbookToByteArray(workbook);
         } catch (IOException e) {
-            log.error("生成 Excel 模版失败", e);
-            throw new RuntimeException("生成 Excel 模版失败", e);
+            throw new ServerException("生成 Excel 模版失败", e);
         }
     }
 
     /**
      * 计算列位置 字段顺序：操作类型 -> 基础字段(userId, username 优先) -> 扩展字段
      */
+    @SuppressWarnings("java:S3776")
     private Map<String, Integer> calculateColumnPositions(List<UserAttrResponseDto> allFields) {
         Map<String, Integer> positions = new LinkedHashMap<>();
         int colNum = 0;
-
-        // 检查是否包含操作类型字段
-        boolean hasOperationType = false;
-        for (UserAttrResponseDto field : allFields) {
-            if ("operationType".equals(field.getKey())) {
-                hasOperationType = true;
-                break;
-            }
-        }
-
-        // 如果没有操作类型字段，手动添加
-        if (!hasOperationType) {
-            positions.put("operationType", colNum++);
-        } else {
-            positions.put("operationType", colNum++);
-        }
+        positions.put("operationType", colNum++);
 
         // 基础字段排序：userId 和 username 优先，其他按数据库顺序
         UserAttrResponseDto userIdField = null;
@@ -132,9 +99,6 @@ public class ExcelTemplateGenerator {
 
         for (UserAttrResponseDto field : allFields) {
             String key = field.getKey();
-            if ("operationType".equals(key)) {
-                continue;
-            }
             if (!Boolean.TRUE.equals(field.getExtFlg())) {
                 if ("userId".equals(key)) {
                     userIdField = field;
@@ -174,6 +138,7 @@ public class ExcelTemplateGenerator {
     /**
      * 创建隐藏 sheet
      */
+    @SuppressWarnings("java:S3776")
     private void createHiddenSheet(XSSFWorkbook workbook, List<UserAttrResponseDto> allFields) {
         XSSFSheet hiddenSheet = workbook.createSheet("_field_mapping");
         workbook.setSheetHidden(workbook.getSheetIndex(hiddenSheet), true);
@@ -197,7 +162,6 @@ public class ExcelTemplateGenerator {
         for (UserAttrResponseDto field : allFields) {
             if (!Boolean.TRUE.equals(field.getExtFlg())) {
                 Row row = hiddenSheet.createRow(rowNum++);
-                // 使用与 attrMap.getName() 一致的标题（不带 * 号），便于导入时匹配
                 row.createCell(0).setCellValue(field.getName());
                 row.createCell(1).setCellValue(field.getKey());
                 row.createCell(2).setCellValue(field.getDataType());
@@ -256,17 +220,12 @@ public class ExcelTemplateGenerator {
      */
     private int createHeader(XSSFSheet sheet, List<UserAttrResponseDto> allFields,
             Map<String, Integer> columnPositions) {
-        log.info("=== createHeader 开始 ===");
-        log.info("columnPositions: {}", columnPositions);
-
         // 获取操作类型列位置
         int operationCol = columnPositions.get("operationType");
-        log.info("operationCol: {}", operationCol);
 
         // 计算基础字段和扩展字段的列范围
         // 基础信息从操作类型列之后开始（排除操作类型列）
         int firstBasicCol = operationCol + 1;
-        log.info("firstBasicCol: {}", firstBasicCol);
 
         // 基础字段数量（extFlg = false）
         int basicFieldCount = 0;
@@ -275,27 +234,20 @@ public class ExcelTemplateGenerator {
                 basicFieldCount++;
             }
         }
-        log.info("basicFieldCount: {}", basicFieldCount);
 
         int lastBasicCol = firstBasicCol + basicFieldCount - 1;
-        log.info("lastBasicCol (基础信息最后列): {} (列字母: {})", lastBasicCol, (char) ('A' + lastBasicCol));
 
         // 扩展字段起始位置
         int firstExtCol = lastBasicCol + 1;
-        log.info("firstExtCol (扩展信息起始列): {} (列字母: {})", firstExtCol, (char) ('A' + firstExtCol));
 
         // 从扩展字段起始位置开始计数
         int colNum = firstExtCol;
-        int extFieldCount = 0;
         for (UserAttrResponseDto field : allFields) {
-            if (field.getExtFlg()) {
+            if (Boolean.TRUE.equals(field.getExtFlg())) {
                 colNum++;
-                extFieldCount++;
             }
         }
         int lastExtCol = colNum - 1;
-        log.info("lastExtCol (扩展信息最后列): {} (列字母: {})", lastExtCol, (char) ('A' + lastExtCol));
-        log.info("扩展字段数量: {}", extFieldCount);
 
         // 第一行：父标题
         Row parentRow = sheet.createRow(0);
@@ -311,11 +263,8 @@ public class ExcelTemplateGenerator {
             Cell basicParent = parentRow.createCell(firstBasicCol);
             basicParent.setCellValue("基础信息");
             basicParent.setCellStyle(parentStyle);
-            log.info("创建基础信息合并区域: CellRangeAddress(0, 0, {}, {}) -> {}-{}",
-                    firstBasicCol, lastBasicCol, (char) ('A' + firstBasicCol), (char) ('A' + lastBasicCol));
             sheet.addMergedRegion(new CellRangeAddress(0, 0, firstBasicCol, lastBasicCol));
         } else if (firstBasicCol == lastBasicCol) {
-            // 只有一个基础字段时，不合并，直接设置值
             Cell basicParent = parentRow.createCell(firstBasicCol);
             basicParent.setCellValue("基础信息");
             basicParent.setCellStyle(parentStyle);
@@ -326,11 +275,8 @@ public class ExcelTemplateGenerator {
             Cell extParent = parentRow.createCell(firstExtCol);
             extParent.setCellValue("扩展信息");
             extParent.setCellStyle(parentStyle);
-            log.info("创建扩展信息合并区域: CellRangeAddress(0, 0, {}, {}) -> {}-{}",
-                    firstExtCol, lastExtCol, (char) ('A' + firstExtCol), (char) ('A' + lastExtCol));
             sheet.addMergedRegion(new CellRangeAddress(0, 0, firstExtCol, lastExtCol));
         } else if (firstExtCol == lastExtCol) {
-            // 只有一个扩展字段时，不合并，直接设置值
             Cell extParent = parentRow.createCell(firstExtCol);
             extParent.setCellValue("扩展信息");
             extParent.setCellStyle(parentStyle);
@@ -399,14 +345,14 @@ public class ExcelTemplateGenerator {
         } else if (UserAttrDataTypeEnum.BOOLEAN.getType().equals(field.getDataType())) {
             comment.append("是/否");
         } else if (UserAttrDataTypeEnum.DATE.getType().equals(field.getDataType())) {
-            comment.append("格式：20260109");
+            comment.append("格式：yyyymmdd");
         } else if (UserAttrDataTypeEnum.DATETIME.getType().equals(field.getDataType())) {
-            comment.append("格式：20260109163045");
+            comment.append("格式：yyyymmddhhmmss");
         } else if (UserAttrDataTypeEnum.NUMBER.getType().equals(field.getDataType())) {
             comment.append("请输入数字");
         }
 
-        return comment.length() > 0 ? comment.toString() : null;
+        return !comment.isEmpty() ? comment.toString() : null;
     }
 
     /**
@@ -450,34 +396,6 @@ public class ExcelTemplateGenerator {
     }
 
     /**
-     * 创建示例行
-     */
-    private void createExampleRow(XSSFSheet sheet, int lastCol) {
-        Row exampleRow = sheet.createRow(2);
-
-        // 创建左对齐的数据样式
-        CellStyle dataStyle = sheet.getWorkbook().createCellStyle();
-        XSSFFont dataFont = (XSSFFont) sheet.getWorkbook().createFont();
-        dataFont.setFontName("Arial");
-        dataFont.setFontHeightInPoints((short) 11);
-        dataStyle.setFont(dataFont);
-        dataStyle.setAlignment(HorizontalAlignment.LEFT);
-        dataStyle.setVerticalAlignment(VerticalAlignment.CENTER);
-
-        // 操作类型单元格
-        Cell operationCell = exampleRow.createCell(0);
-        operationCell.setCellValue("0");
-        operationCell.setCellStyle(dataStyle);
-
-        // 其他单元格
-        for (int i = 1; i < lastCol; i++) {
-            Cell cell = exampleRow.createCell(i);
-            cell.setCellValue("");
-            cell.setCellStyle(dataStyle);
-        }
-    }
-
-    /**
      * 设置数据验证
      */
     private void setDataValidations(XSSFSheet sheet, XSSFWorkbook workbook, List<UserAttrResponseDto> allFields,
@@ -489,7 +407,8 @@ public class ExcelTemplateGenerator {
         if (operationCol != null) {
             DataValidationConstraint operationConstraint = validationHelper.createExplicitListConstraint(
                     new String[]{"0", "1", "2"});
-            CellRangeAddressList operationRange = new CellRangeAddressList(2, 10000, operationCol, operationCol);
+            CellRangeAddressList operationRange = new CellRangeAddressList(2, MAX_ROW_COUNT, operationCol,
+                    operationCol);
             DataValidation operationValidation = validationHelper.createValidation(operationConstraint, operationRange);
             sheet.addValidationData(operationValidation);
         }
@@ -497,9 +416,6 @@ public class ExcelTemplateGenerator {
         // 为每个字段设置数据验证
         for (UserAttrResponseDto field : allFields) {
             String fieldKey = field.getKey();
-            if ("operationType".equals(fieldKey)) {
-                continue; // 跳过操作类型
-            }
             Integer colNum = columnPositions.get(fieldKey);
             if (colNum == null) {
                 continue;
@@ -512,7 +428,7 @@ public class ExcelTemplateGenerator {
                 // 布尔类型：是/否
                 DataValidationConstraint booleanConstraint = validationHelper.createExplicitListConstraint(
                         new String[]{"是", "否"});
-                CellRangeAddressList booleanRange = new CellRangeAddressList(2, 10000, colNum, colNum);
+                CellRangeAddressList booleanRange = new CellRangeAddressList(2, MAX_ROW_COUNT, colNum, colNum);
                 DataValidation booleanValidation = validationHelper.createValidation(booleanConstraint, booleanRange);
                 sheet.addValidationData(booleanValidation);
             }
@@ -543,13 +459,13 @@ public class ExcelTemplateGenerator {
 
         if (!dataRows.isEmpty()) {
             // 使用第一个和最后一个数据行构建范围
-            int startRow = dataRows.get(0);
-            int endRow = dataRows.get(dataRows.size() - 1);
+            int startRow = dataRows.getFirst();
+            int endRow = dataRows.getLast();
             // 直接引用隐藏 sheet C 列的数据范围
             String formula = "_field_mapping!$C$" + (startRow + 1) + ":$C$" + (endRow + 1);
             DataValidationHelper validationHelper = sheet.getDataValidationHelper();
             DataValidationConstraint dictConstraint = validationHelper.createFormulaListConstraint(formula);
-            CellRangeAddressList dictRange = new CellRangeAddressList(2, 10000, colNum, colNum);
+            CellRangeAddressList dictRange = new CellRangeAddressList(2, MAX_ROW_COUNT, colNum, colNum);
             DataValidation dictValidation = validationHelper.createValidation(dictConstraint, dictRange);
             sheet.addValidationData(dictValidation);
         }
@@ -558,6 +474,7 @@ public class ExcelTemplateGenerator {
     /**
      * 自动调整列宽 根据字段名称的字符数计算列宽：宽度 = (最大字符数 + 2) * 256
      */
+    @SuppressWarnings("java:S3776")
     private void autoSizeColumns(XSSFSheet sheet, int lastCol, Map<String, Integer> columnPositions,
             List<UserAttrResponseDto> allFields) {
         for (int i = 0; i < lastCol; i++) {
@@ -582,7 +499,7 @@ public class ExcelTemplateGenerator {
             // 计算列宽：中文按 2 倍字符宽度计算
             int charWidth = fieldName != null ? calculateStringWidth(fieldName) : 10;
             int width = (charWidth + 2) * 256; // 留出左右边距
-            width = Math.min(Math.max(width, 2000), 20000); // 限制在合理范围内
+            width = Math.clamp(width, 2000, 20000);
             sheet.setColumnWidth(i, width);
         }
     }
@@ -591,7 +508,7 @@ public class ExcelTemplateGenerator {
      * 计算字符串宽度（考虑中文字符）
      */
     private int calculateStringWidth(String text) {
-        int width = 0;
+        double width = 0;
         for (char c : text.toCharArray()) {
             if (c >= 0x4E00 && c <= 0x9FA5) {
                 // 中文字符宽度为 2
